# data_structures

LAB1_HASHING/: CMakeLists.txt  CMakeLists.txt.in  compilarLabAluno
LAB1_HASHING/data/: huckfinn.txt
LAB1_HASHING/src/: hash.cpp  hash.h  hashfunctions.cpp
LAB1_HASHING/test/: testLab1.cpp
LAB2_RBTREE/: CMakeLists.txt  CMakeLists.txt.in  generateZipProf  generateZipProf~
LAB2_RBTREE/data/: oakland100lines.asc  oakland_part2_complete.asc.bz2
LAB2_RBTREE/lib/: IndexFactory.cpp  IndexFactory.h  IndexPointsAbstract.h  IndexPointsStlMultimap.cpp  IndexPointsStlMultimap.h  Point3.cpp  Point3.h  PointReader.cpp  PointReader.h  Tick.cpp  Tick.h
LAB2_RBTREE/src/: IndexPointsAluno.cpp  IndexPointsAluno.h  Node.cpp  Node.h  RBTree.cpp  RBTree.h
LAB2_RBTREE/test/: testTree.cpp
LAB3/: CMakeLists.txt  zipaParaEntregar
LAB3/lib/: sortauxfuncs.cpp  sortauxfuncs.h
LAB3/src/: mymergesort.cpp  myquicksort.cpp
LAB3/test/: testSort.cpp
LAB3_SORT/: compilarLabProf  compilarLabProf~  generateZipProf  generateZipProf~
LAB3_SORT/lib/: Tick.h  stl_sort.cpp  stl_sort.h
LAB3_SORT/src/: mymergesort.cpp  myradixsort.cpp  mysortfunctions.h
LAB3_SORT/test/: testSort.cpp
LAB4_SSP_TROCO/: CMakeLists.txt  compilarLabProfC++14  compilarTrocoProf  generateZipProf
LAB4_SSP_TROCO/include/: balsub.h  solveTroco.h  subsum.h
LAB4_SSP_TROCO/lib/: SSPInstanceGenerator.cpp  SSPInstanceGenerator.h  SSPSolverFactory.cpp  SSPSolverFactory.h  SSP_Exp.cpp  SSP_Exp.h  SubsetSumSolverAbstract.h  SubsetSumSolverBalsub.cpp  SubsetSumSolverBalsub.h  SubsetSumSolverDecPis.cpp  SubsetSumSolverDecPis.h  Tick.cpp  TrocoSolverAbstract.h  TrocoSolverFactory.cpp  TrocoSolverFactory.h
LAB4_SSP_TROCO/src/: SSPSolverAluno2.cpp  SSPSolverExtra.cpp  SSPSolverPD.cpp  SubsetSumSolver.h  TrocoSolver.h  TrocoSolverDivConquer.cpp  TrocoSolverGreedy.cpp  TrocoSolverPD.cpp  testesAluno.cpp  testesAluno.h
LAB4_SSP_TROCO/test/: testSSP.cpp  testTroco.cpp
LAB5_VIAJANTE/: CMakeLists.txt  generateZipProf
LAB5_VIAJANTE/lib/: TspReader.h
LAB5_VIAJANTE/src/: TspSolver.cpp  TspSolver.h  graph.cpp  graph.h  heap.cpp  heap.h
LAB5_VIAJANTE/test/: testTsp.cpp
